issue/cast-ec2/CAST_MANUAL_DUMP/raw/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-053b41f329207cd48",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-030d39057ed8fa1b5",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:925774240130:security-group/sg-053b41f329207cd48",
            "OwnerId": "925774240130",
            "GroupName": "launch-wizard-3",
            "Description": "launch-wizard-3 created 2025-10-07T19:05:56.755Z",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "163.116.249.49/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
